--- a/faecher/bioinformatik.html
+++ b/faecher/bioinformatik.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <title>Einstieg Erstsemester - Bioinformatik</title>
     <link rel="stylesheet" href="../Stylesheets/style.css">
+    <style>
+
+        #background {
+            position: absolute;
+            background: linear-gradient(white, white, #ddd);
+            width: 100vw;
+            height: 100vh;
+            right: 0;
+            top: 0;
+            z-index: -1;
+        }
+    </style>
 </head>
 <body>
 <header>
@@ -41,5 +53,6 @@
 <footer>
     <a href="../impressum.html">Kontakt</a>
 </footer>
+<div id="background"></div>
 </body>
 </html>
