--- a/faecher/bioinformatik.html
+++ b/faecher/bioinformatik.html
@@ -19,7 +19,6 @@
             float: left;
             width: 40%;
             margin-left: 2em;
-            margin-top: 2em;
         }
 
         .image {
@@ -35,7 +34,7 @@
 </head>
 <body>
 <header>
-    <a href="../index.html"><img src="../Images/Logo.png" id="logo"></a>
+    <a href="../index.html"><img src="../Images/logo.svg" id="logo"></a>
     <nav>
         <ul>
             <li class="dropdown active">
@@ -64,20 +63,30 @@
 <content>
     <h1>Bioinformatik</h1>
     <main>
-        <div id="text">
+        <div id="information">
+            <div id="text">
                 <h2>Beschreibung</h2>
                 <p>Der Studiengang Bioinformatik besteht haupstsächlich aus Veranstaltungen aus den Bereichen:
                     Informatik, Mathematik, Biologie und Chemie.  Hierbei werden „Informatik und Mathematik“ und die
-                    „Lebens – und Naturwissenschaften“ zu gleichen Teilen gewichtet.</p>
-                <br>
-                <p>Regelstudienzeit sind 6 Semester. Studienbeginn ist sowohl im Wintersemester, als auch im
-                    Sommersemester möglich.</p>
-                <br>
-                <p>Wer sich für Informationsverarbeitung im Bereich der Lebenswissenschaften interressiert, oder  eine
-                    Forschungskarriere im Bereich Pharmaindustrie, Biotechnologie, Biologie, oder Informatik anstrebt,
-                    sollte sich genauer mit dem Studiengang beschäftigen.</p>
+                    „Lebens – und Naturwissenschaften“ zu gleichen Teilen gewichtet.</p><br>
+                <p>Die Kurse des 6-semestrigen Studiums sind bis zum 4. Semester komplett festgelegt.  Ab dem 5.
+                    Semester
+                    können einige Schwerpunkte nach eigenem Interesse gesetzt werden.</p><br>
+                <p>Kurse können in Form von Vorlesungen, Seminaren, Übungen und Praktika stattfinden.</p><br>
+                <h2>Allgemeine Daten</h2>
+                <p>Studienbeginn: Winter – oder Sommersemester</p><br>
+                <p>Abschluss: Bachelor of Science</p><br>
+                <p>Zulassungsbeschränkt: Ja</p><br>
+                <p>Regelstudienzeit: 6 Semester</p><br>
+                <h2>Berufsperspektiven</h2>
+                <p>Durch den immer häufigeren Einsatz von Methoden der Informatik, in den Bereichen Biotechnologie und
+                    Pharmakologie, gibt es einen immer größeren Bedarf an Bioinformatikern. Es ist wahrscheinlich, dass
+                    sich dieser Trend weiter fortsetzen wird.</p><br>
+                <p>Da in den Gebieten der Biotechnolgie und Pharmaindustrie viele Qualifikationen gefordert werden, ist
+                    eine Promotion oft sinnvoll.</p>
+            </div>
+            <img class="image" src="../Images/bioinfo.jpg">
         </div>
-        <img class="image" src="../Images/bioinfo.jpg">
         <div id="stundenplan">
             <h2>Stundenplan – Erstes Semester</h2>
             <table>
