--- a/faecher/bioinformatik.html
+++ b/faecher/bioinformatik.html
@@ -105,6 +105,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Luxburg</p>
                             <p><strong>Uhrzeit:</strong> 08:15 – 10:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N7</a></p>
                             <p><strong>Klausur:</strong> 12. Februar 2018</p>
                         </div>
                     </td>
@@ -114,6 +115,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Luxburg</p>
                             <p><strong>Uhrzeit:</strong> 08:15 – 10:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 12. Februar 2018</p>
                         </div>
                     </td>
@@ -130,6 +132,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Speiser</p>
                             <p><strong>Uhrzeit:</strong> 11:15 – 13:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N7</a></p>
                             <p><strong>Klausur:</strong> n.a.</p>
                         </div>
                     </td>
@@ -142,6 +145,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Nordheim</p>
                             <p><strong>Uhrzeit:</strong> 12:15 – 14:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 29.11.2017</p>
                             <p><strong>Zusatzinfos:</strong> Vorlesungen über 5 Wochen</p>
                         </div>
@@ -151,6 +155,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Nordheim</p>
                             <p><strong>Uhrzeit:</strong> 12:15 – 14:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 29.11.2017</p>
                             <p><strong>Zusatzinfos:</strong> Vorlesungen über 5 Wochen</p>
                         </div>
@@ -160,6 +165,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Nordheim</p>
                             <p><strong>Uhrzeit:</strong> 12:15 – 14:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 29.11.2017</p>
                             <p><strong>Zusatzinfos:</strong> Vorlesungen über 5 Wochen</p>
                         </div>
@@ -169,6 +175,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Speiser</p>
                             <p><strong>Uhrzeit:</strong> 11:15 – 13:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N7</a></p>
                             <p><strong>Klausur:</strong> n.a.</p>
                         </div>
                     </td>
@@ -177,6 +184,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Nordheim</p>
                             <p><strong>Uhrzeit:</strong> 12:15 – 14:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 29.11.2017</p>
                             <p><strong>Zusatzinfos:</strong> Vorlesungen über 5 Wochen</p>
                         </div>
@@ -189,6 +197,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Meyer</p>
                             <p><strong>Uhrzeit:</strong> 14:15 – 16:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> n.a.</p>
                         </div>
                     </td>
@@ -197,6 +206,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Ostermann</p>
                             <p><strong>Uhrzeit:</strong> 14:15 – 16:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 06. Februar 2018</p>
                         </div>
                     </td>
@@ -206,6 +216,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Ostermann</p>
                             <p><strong>Uhrzeit:</strong> 14:15 – 16:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 06. Februar 2018</p>
                         </div>
                     </td>
