--- a/faecher/medizininformatik.html
+++ b/faecher/medizininformatik.html
@@ -37,7 +37,7 @@
     <a href="../index.html"><img src="../Images/logo.svg" id="logo"></a>
     <nav>
         <ul>
-            <li class="dropdown active">
+            <li class="dropdown faecher active">
                 <a href="faecher.html" class="dropbtn">Fächer</a>
                 <div class="dropdown_content">
                     <a href="bioinformatik.html">Bioinformatik</a>
