--- a/faecher/bioinformatik.html
+++ b/faecher/bioinformatik.html
@@ -19,6 +19,7 @@
             float: left;
             width: 40%;
             margin-left: 2em;
+            line-height: 1.15em;
         }
 
         .image {
@@ -38,7 +39,7 @@
     <nav>
         <ul>
             <li class="dropdown faecher active">
-                <a href="faecher.html" class="dropbtn">Fächer</a>
+                <a href="faecher.html" class="dropbtn">Studienangebote</a>
                 <div class="dropdown_content">
                     <a href="bioinformatik.html">Bioinformatik</a>
                     <a href="informatik.html">Informatik</a>
@@ -65,20 +66,20 @@
     <main>
         <div id="information">
             <div id="text">
-                <h2>Beschreibung</h2>
+                <h2>Beschreibung</h2><br>
                 <p>Der Studiengang Bioinformatik besteht haupstsächlich aus Veranstaltungen aus den Bereichen:
                     Informatik, Mathematik, Biologie und Chemie.  Hierbei werden „Informatik und Mathematik“ und die
                     „Lebens – und Naturwissenschaften“ zu gleichen Teilen gewichtet.</p><br>
                 <p>Die Kurse des 6-semestrigen Studiums sind bis zum 4. Semester komplett festgelegt.  Ab dem 5.
                     Semester
                     können einige Schwerpunkte nach eigenem Interesse gesetzt werden.</p><br>
-                <p>Kurse können in Form von Vorlesungen, Seminaren, Übungen und Praktika stattfinden.</p><br>
-                <h2>Allgemeine Daten</h2>
+                <p>Kurse können in Form von Vorlesungen, Seminaren, Übungen und Praktika stattfinden.</p><br><br>
+                <h2>Allgemeine Daten</h2><br>
                 <p>Studienbeginn: Winter – oder Sommersemester</p><br>
                 <p>Abschluss: Bachelor of Science</p><br>
                 <p>Zulassungsbeschränkt: Ja</p><br>
-                <p>Regelstudienzeit: 6 Semester</p><br>
-                <h2>Berufsperspektiven</h2>
+                <p>Regelstudienzeit: 6 Semester</p><br><br>
+                <h2>Berufsperspektiven</h2><br>
                 <p>Durch den immer häufigeren Einsatz von Methoden der Informatik, in den Bereichen Biotechnologie und
                     Pharmakologie, gibt es einen immer größeren Bedarf an Bioinformatikern. Es ist wahrscheinlich, dass
                     sich dieser Trend weiter fortsetzen wird.</p><br>
@@ -233,6 +234,7 @@
             </table>
             <span id="zusatzinfos">
                 <p>Anmerkung: Hinzu kommen noch Übungen und Übungsgruppen für die jeweiligen Fächer.</p>
+                <p id="attention">Gehe mit der Maus über die einzelnen Fächer um zusätzliche Informationen zu erhalten.</p>
             </span>
         </div>
     </main>
