--- a/faecher/bioinformatik.html
+++ b/faecher/bioinformatik.html
@@ -15,13 +15,6 @@
             margin-top: 1em;
         }
 
-        #text {
-            float: left;
-            width: 40%;
-            margin-left: 2em;
-            line-height: 1.15em;
-        }
-
         .image {
             height: 20em;
             margin-left: 3em;
@@ -65,11 +58,11 @@
     <h1>Bioinformatik</h1>
     <main>
         <div id="information">
-            <div id="text">
+            <div id="texte">
                 <h2>Beschreibung</h2><br>
                 <p>Der Studiengang Bioinformatik besteht haupstsächlich aus Veranstaltungen aus den Bereichen:
                     Informatik, Mathematik, Biologie und Chemie.  Hierbei werden „Informatik und Mathematik“ und die
-                    „Lebens – und Naturwissenschaften“ zu gleichen Teilen gewichtet.</p><br>
+                    „Naturwissenschaften“ zu gleichen Teilen gewichtet.</p><br>
                 <p>Die Kurse des 6-semestrigen Studiums sind bis zum 4. Semester komplett festgelegt.  Ab dem 5.
                     Semester
                     können einige Schwerpunkte nach eigenem Interesse gesetzt werden.</p><br>
@@ -81,9 +74,9 @@
                 <p>Regelstudienzeit: 6 Semester</p><br><br>
                 <h2>Berufsperspektiven</h2><br>
                 <p>Durch den immer häufigeren Einsatz von Methoden der Informatik, in den Bereichen Biotechnologie und
-                    Pharmakologie, gibt es einen immer größeren Bedarf an Bioinformatikern. Es ist wahrscheinlich, dass
+                    Pharmakologie, gibt es einen immer größeren Bedarf an Bioinformatikern.  Es ist wahrscheinlich, dass
                     sich dieser Trend weiter fortsetzen wird.</p><br>
-                <p>Da in den Gebieten der Biotechnolgie und Pharmaindustrie viele Qualifikationen gefordert werden, ist
+                <p>Da in den Gebieten der Biotechnologie und Pharmaindustrie viele Qualifikationen gefordert werden, ist
                     eine Promotion oft sinnvoll.</p>
             </div>
             <img class="image" src="../Images/bioinfo.jpg">
